# recuperation_eau_pluie

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
Projet/besoins/: index.html
Projet/pluie/: index.html
data/: consommation_potager.csv  daily_rain_clermont.csv  donnees.csv  fiche_climat_clermont.csv
docs/: index.md  references.bib
docs/Projet/: besoins.ipynb  pluie.ipynb
docs/scripts/: reference.py
home/: index.html
notebooks/: dimensionnement_cuve.ipynb  evaluation_besoins.ipynb  recuperation_eau_pluie.code-workspace  simulationNotebook.py
recuperation_eau_pluie/: __init__.py  simulation.py
reference/SUMMARY/: index.html
scripts/development/: index.html
scripts/reference/: index.html
search/: search_index.json
